# threshold-eval

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  meson.build
.github/: SECURITY.md
.github/workflows/: ci.yml
config/: threshold_eval_version.h.in
docs/sphinx/: Doxyfile  Makefile  conf.py  index.rst
docs/sphinx/api/: modules.rst  threshold_eval.rst
include/: threshold_eval.h  threshold_eval_conf.h
src/: threshold_eval.c
tests/: meson.build  test_boundaries.c  test_config.c  test_edge_cases.c  test_evaluation.c  test_harness.h  test_helpers.c  test_hysteresis.c  test_nonfinite_samples.c  test_policies.c  test_threshold_eval.c  test_threshold_ordering.c  test_validation.c
